# Cleo-AI-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.en.md  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
cleo/agents/: __init__.py  cleo.py  dream.py
cleo/agents/tools/: __init__.py  codex_tools.py  dream_agent_tools.py  memory_tools.py  shell_tools.py
cleo/cli/: __init__.py  application.py  chat.py  completion.py  console.py  context.py  lifecycle.py  productivity.py  productivity_renderer.py  workspace.py
cleo/config/: settings.py
cleo/config/templates/: cleo.example.json  harnesses.example.json
cleo/harnesses/: __init__.py  adapter.py  models.py  provider.py
cleo/images/: __init__.py  portrait.py  sixel_encoder.py  sixel_renderable.py  startup.py
cleo/integrations/: __init__.py  codex.py  git.py
cleo/integrations/harnesses/: __init__.py  acp.py  claude.py  codex.py  factory.py
cleo/mcp/: codex_server.py
cleo/memory/: __init__.py  compaction.py  paths.py  state.py  store.py
cleo/runtime/: __init__.py  state.py
cleo/sessions/: __init__.py  hub.py  store.py
cleo_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: cleo.example.json  settings.py
core/: agent.py  cli.py
core/integrations/: __init__.py  codex.py
core/integrations/agent_adapter/: __init__.py  acp.py  adapter.py  claude.py  codex.py  models.py
core/memory/: compaction.py  session_store.py  state.py  store.py  thread_memory.py
core/runtime/: model.py
data/: runtime_example.json
docker/: requirements.Dockerfile
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  CASTMIND_MEMORY_MIGRATION.md  Cleo_Runtime_State_Maintenance_Guide.docx
mcp/: openai_codex_mcp.py
mcp_servers/: __init__.py  openai_codex_mcp.py
memory/: AGENT.md  MEMORY_POLICY.md
scripts/: clean-runtime.cmd  clean-runtime.ps1  install.ps1  uninstall.ps1  update.ps1  update_project.py
skills/cad-geometry-extractor/: SKILL.md
skills/cad-geometry-extractor/scripts/: runStpAnalyzer.py
skills/demo-production/: SKILL.md
skills/demo-production/agents/: openai.yaml
skills/die-casting-gate-design/: SKILL.md
skills/die-casting-gate-design/profiles/: final_design_template.json
skills/die-casting-gate-design/scripts/: casting_design_process.py  markdown_output.py
skills/pptx-template-editor/: SKILL.md
skills/pptx-template-editor/profiles/: cleaning-profile.template.json
skills/pptx-template-editor/scripts/: clean_pptx_template.ps1  inspect_pptx_openxml.ps1  inspect_pptx_tables.ps1
skills/presentations/agents/: openai.yaml
tests/: test_agent_adapter.py  test_async_runtime.py  test_boundaries.py  test_cli.py  test_memory_pipeline.py  test_provider_factory.py  test_session_hub.py  test_settings_paths.py
tests/agents/: test_cleo.py  test_dream.py
tests/cli/: test_application.py  test_console.py
tests/config/: test_directories.py  test_settings.py
tests/images/: test_terminal.py
tests/integrations/: test_codex_facade.py  test_harness_factory.py  test_harnesses.py
tests/memory/: test_pipeline.py
tests/runtime/: test_state.py
tests/sessions/: test_hub.py  test_store.py
tools/: codex_tools.py  dream_agent_tools.py  memory_tools.py  shell_tools.py
workspace/: product.stl
(+2 files in other folders)
