[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-ai-agent"
version = "0.1.0"
description = "A local personal AI agent runtime built on Deep Agents and LangChain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agent-client-protocol>=0.11,<1",
  "claude-agent-sdk>=0.2,<0.3",
  "deepagents",
  "fastmcp>=3.4,<4",
  "langchain",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "openai-codex>=0.1.0b3,<0.2",
  "openai-codex-cli-bin==0.137.0a4",
  "pydantic",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
cleo = "main:main"
cleo-codex-mcp = "mcp_servers.openai_codex_mcp:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "tools*", "mcp_servers*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
