[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-ai-agent"
version = "0.1.0"
description = "A local personal AI agent runtime built on Deep Agents and LangChain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agent-client-protocol>=0.11,<1",
  "claude-agent-sdk>=0.2,<0.3",
  "deepagents",
  "fastmcp>=3.4,<4",
  "langchain",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "openai-codex>=0.144.4,<0.145",
  "openai-codex-cli-bin==0.144.4",
  "platformdirs>=4.4,<5",
  "prompt-toolkit>=3.0,<4",
  "pydantic",
  "rich",
  "textual-image>=0.8.5,<0.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
cleo = "cleo.cli.application:main"
cleo-codex-mcp = "cleo.mcp.codex_server:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["cleo*"]

[tool.setuptools.package-data]
"cleo.config" = ["templates/*.json"]
"cleo.images" = ["assets/*.png"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
